--- a/lesson19_1.ipynb
+++ b/lesson19_1.ipynb
@@ -75,8 +75,8 @@
    "outputs": [],
    "source": [
     "frame=pd.DataFrame(np.arange(12).reshape((4,3)),\n",
-    "                   index=[['a','a','b','b'],[1,2,1,2],\n",
-    "                          columns=[['台北','台北','台中'],['Green','Red','Green']]])\n",
+    "                   index=[['a','a','b','b'],[1,2,1,2]],\n",
+    "                          columns=[['台北','台北','台中'],['Green','Red','Green']])\n",
     "frame"
    ]
   },
@@ -102,9 +102,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'frame' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[1], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[43mframe\u001b[49m[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m台北\u001b[39m\u001b[38;5;124m'\u001b[39m][\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mGreen\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'frame' is not defined"
+     ]
+    }
+   ],
    "source": [
     "frame['台北']['Green']"
    ]
@@ -115,13 +127,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "frame.stack().stack()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame.stack(level=[0,1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame=pd.DataFrame(np.arange(12).reshape((4,3)),\n",
+    "                   index=[['a','a','b','b'],[1,2,1,2]],\n",
+    "                          columns=[['台北','台北','台中'],['Green','Red','Green']])\n",
     "frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame.index.names=['key1','key2']\n",
+    "frame.columns.names=['縣市','顏色']\n",
+    "frame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#swaplevel()\n",
+    "frame.swaplevel('key1','key2')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sort_index()\n",
+    "frame.sort_index(level=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#重複的索引直要做統計\n",
+    "#groupby(level=1)\n",
+    "frame.groupby(level=1).sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frame.groupby(axis=1,level='縣市').sum()"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
